--- a/style/main.scss
+++ b/style/main.scss
@@ -1,49 +1,86 @@
-// Add your SCSS styles here
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+  box-sizing: border-box;
+}
+
+body{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #06283D;
 }
 
 .container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  position: relative;
+  width: 400px;
+  height: 105px;
+  background: #fff;
+  padding: 28px 32px;
+  overflow: hidden;
+  border-radius: 18px;
+  font-family: 'Roboto', sans-serif;
+  transition: 0.6s ease-out;
 
   h1 {
       font-size: 24px;
   }
 
   .search-container {
-      margin-top: 20px;
+    width: 100%;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-      input[type="text"] {
-          padding: 10px;
-          width: 60%;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          font-size: 16px;
-      }
+    input[type="text"] {
+      color: #06283D;
+      width: 80%;
+      font-size: 24px;
+      font-weight: 500;
+      text-transform: uppercase;
+      padding-left: 32px;
+    }
 
-      button {
-          padding: 10px 20px;
-          background-color: #007BFF;
-          color: #fff;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-          font-size: 16px;
+    input::placeholder{
+      font-size: 20px;
+      font-weight: 500;
+      color: #06283D;
+      text-transform: capitalize;
+    }
+
+    button {
+      cursor: pointer;
+      width: 50px;
+      height: 50px;
+      color: #06283D;
+      background: #dff6ff;
+      border-radius: 50%;
+      font-size: 22px;
+      transition: 0.4s ease;
+      :hover {
+        color: #fff;
+        background: #06283D;
       }
+    }
+
+    i {
+      position: absolute;
+      color: #06283D;
+      font-size: 28px;
+    }
   }
 
   .weather-info {
-      margin-top: 20px;
+    text-align: center;
 
-      p {
-          font-size: 18px;
-      }
+    p {
+      color: #06283D;
+      font-size: 14px;
+      font-weight: 500;
+    }
   }
 }
