compiled to css

--- a/style/main.css
+++ b/style/main.css
@@ -1,44 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #06283D;
 }
 
 .container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  position: relative;
+  width: 400px;
+  height: 105px;
+  background: #fff;
+  padding: 28px 32px;
+  overflow: hidden;
+  border-radius: 18px;
+  font-family: "Roboto", sans-serif;
+  transition: 0.6s ease-out;
 }
 .container h1 {
   font-size: 24px;
 }
 .container .search-container {
-  margin-top: 20px;
+  width: 100%;
+  height: min-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .container .search-container input[type=text] {
-  padding: 10px;
-  width: 60%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
+  color: #06283D;
+  width: 80%;
+  font-size: 24px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding-left: 32px;
+}
+.container .search-container input::placeholder {
+  font-size: 20px;
+  font-weight: 500;
+  color: #06283D;
+  text-transform: capitalize;
 }
 .container .search-container button {
-  padding: 10px 20px;
-  background-color: #007BFF;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  color: #06283D;
+  background: #dff6ff;
+  border-radius: 50%;
+  font-size: 22px;
+  transition: 0.4s ease;
+}
+.container .search-container button :hover {
+  color: #fff;
+  background: #06283D;
+}
+.container .search-container i {
+  position: absolute;
+  color: #06283D;
+  font-size: 28px;
 }
 .container .weather-info {
-  margin-top: 20px;
+  text-align: center;
 }
 .container .weather-info p {
-  font-size: 18px;
+  color: #06283D;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=main.css.map */
