--- a/style/main.scss
+++ b/style/main.scss
@@ -84,3 +84,17 @@ body{
     }
   }
 }
+
+// END OF CONTAINER
+
+.fadeIn{
+  animation: 0.5s fadeIn forwards;
+  animation-delay: 0.5s;
+}
+
+@keyframes fadeIn{
+  to {
+      scale: 1;
+      opacity: 1;
+  }
+}
