--- a/style/main.scss
+++ b/style/main.scss
@@ -18,7 +18,7 @@ body{
   position: relative;
   width: 400px;
   height: 105px;
-  background: #fff;
+  background: #FAF9F6;
   padding: 28px 32px;
   overflow: hidden;
   border-radius: 18px;
@@ -62,7 +62,7 @@ body{
       font-size: 22px;
       transition: 0.4s ease;
       :hover {
-        color: #fff;
+        color: #FAF9F6;
         background: #06283D;
       }
     }
