Update container color on css

--- a/style/main.css
+++ b/style/main.css
@@ -18,7 +18,7 @@ body {
   position: relative;
   width: 400px;
   height: 105px;
-  background: #fff;
+  background: #FAF9F6;
   padding: 28px 32px;
   overflow: hidden;
   border-radius: 18px;
@@ -60,7 +60,7 @@ body {
   transition: 0.4s ease;
 }
 .container .search-container button :hover {
-  color: #fff;
+  color: #FAF9F6;
   background: #06283D;
 }
 .container .search-container i {
