--- a/style/main.scss
+++ b/style/main.scss
@@ -11,7 +11,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #06283D;
+  background: #0c517c;
 }
 
 .container {
@@ -37,7 +37,7 @@ body{
     justify-content: space-between;
 
     input[type="text"] {
-      color: #06283D;
+      color: #0c517c;
       width: 80%;
       font-size: 24px;
       font-weight: 500;
@@ -48,7 +48,7 @@ body{
     input::placeholder{
       font-size: 20px;
       font-weight: 500;
-      color: #06283D;
+      color: #0c517c;
       text-transform: capitalize;
     }
 
@@ -56,20 +56,20 @@ body{
       cursor: pointer;
       width: 50px;
       height: 50px;
-      color: #06283D;
+      color: #0c517c;
       background: #dff6ff;
       border-radius: 50%;
       font-size: 22px;
       transition: 0.4s ease;
       :hover {
         color: #FAF9F6;
-        background: #06283D;
+        background: #0c517c;
       }
     }
 
     i {
       position: absolute;
-      color: #06283D;
+      color: #0c517c;
       font-size: 28px;
     }
   }
@@ -78,7 +78,7 @@ body{
     text-align: center;
 
     p {
-      color: #06283D;
+      color: #0c517c;
       font-size: 14px;
       font-weight: 500;
     }
@@ -96,20 +96,20 @@ body{
   margin-top: 30px;
 
   i {
-    color: #06283D;
+    color: #0c517c;
     font-size: 26px;
     margin-right: 10px;
     margin-top: 6px;
   }
 
   span {
-    color: #06283D;
+    color: #0c517c;
     font-size: 22px;
     font-weight: 500;
   }
 
   p {
-    color: #06283D;
+    color: #0c517c;
     font-size: 14px;
     font-weight: 500;
   }
