--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,43 @@ body {
   background: #0c517c;
 }
 
+#loading-container {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+#loading-container #spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#loading-container.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
 .container {
   position: relative;
   width: 400px;
@@ -126,6 +163,40 @@ body {
   opacity: 0;
 }
 
+/* Styles for the forecast container */
+#forecast-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-top: rgba(12, 81, 124, 0.5) 1px solid;
+  color: #0c517c;
+}
+
+/* Styles for individual forecast days */
+.forecast-day {
+  text-align: center;
+  padding: 10px;
+}
+
+/* Style for forecast day headings */
+.forecast-day h3 {
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+}
+
+/* Style for temperature and description */
+.forecast-day p {
+  font-size: 1rem;
+  margin: 0;
+}
+
+/* Add styles for the loading icon or spinner, if applicable */
+.loading-icon {
+  /* Styles for the loading icon or spinner */
+}
+
 .fadeIn {
   animation: 0.5s fadeIn forwards;
   animation-delay: 0.5s;
@@ -135,43 +206,6 @@ body {
   to {
     scale: 1;
     opacity: 1;
-  }
-}
-#loading-container {
-  opacity: 1;
-  transition: opacity 0.5s ease;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
-  z-index: 1000;
-}
-#loading-container #spinner {
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#loading-container.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-@keyframes spin {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
 
